# computer-club-monitor

./: CMakeLists.txt  main.cpp  main.hpp  readme.md  utils.cpp
data/: formatNTables.txt  formatName.txt  test2.txt  tooEarly.txt
tests/: test_name.cpp  test_time.cpp
